--- a/html/test.html
+++ b/html/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-     <meta charset="UTF-8">保证页面不会乱码
+     <meta charset="UTF-8"><!--保证页面不会乱码-->
      <title>标题</title>
      <meta name="keywords" content="名称">
      <meta name="description" content="介绍">
@@ -14,11 +14,14 @@
         <h4>11111</h4>
         <h5>11111</h5>
         <p>代表段落的p标签</p>
-        <img scr="http://image.so.com/v?src=360pic_normal&z=1&i=0&cmg=0ee0fac88f669dc25c4b2ede33751373&q=%E9%82%93%E4%BC%A6&correct=%E9%82%93%E4%BC%A6&cmsid=21ec08a89e94385c1cd970ba5bd213c2&cmran=0&cmras=0&cn=0&gn=0&kn=26#multiple=0&gsrc=1&dataindex=2&id=ba7547106c72b165136c0bc547140cc8&currsn=0&jdx=2&fsn=86">
-        <img scr="html/1.jpg" title="这是一张图" alt="图片图片">//图片显示不出来的时候alt里面的内容就会显示
-        //<img scr="图片的路径"/>
+        <!--<img src="网络图片图片右键复制图片地址">-->
+        <img src="http://img1.touxiang.cn/uploads/20140513/13-072428_307.jpg">
+        <img src="1.jpg" title="这是一张图" alt="图片图片">//图片显示不出来的时候alt里面的内容就会显示
+        <!--<img src="本地图片的路径"/>-->
+        <!--图片所在文件夹和本文档在一起时用  文件名/图片名.jpg
+            图片和文档在一个文件夹中只用  图片名.jpg-->
         <a href="超链接跳转网址"target="_blank">超链接跳转界面名称</a>
-                //http://......... //
+               <!--http://......... -->
                                  <!--打开新网页的时候原网页还在//-->
                  <ul>
                  <li>标题</li>
@@ -26,13 +29,13 @@
                  <li>11</li>
                  <li>22</li>
                  <li>33</li>
-                 //无序列表
+                <!--无序列表-->
                  </ul>
 <ol>
      <li>11</li>
      <li>22</li>
     <li>33</li>
-    //有序列表
+   <!--有序列表-->
 </ol>
 <!--区块 用来布局div+css-->
 <!--行级元素 多个占一行
