--- a/html/test.html
+++ b/html/test.html
@@ -7,7 +7,7 @@
      <meta name="description" content="介绍">
    </head> 
    <body>
-     <body style="height:2000px;"></body>
+   <body style="height:2000px;"></body>
         <h1>11111</h1>
         <h2>11111</h2>
         <h3>11111</h3> 
@@ -23,42 +23,70 @@
         <a href="超链接跳转网址"target="_blank">超链接跳转界面名称</a>
                <!--http://......... -->
                                  <!--打开新网页的时候原网页还在//-->
-                 <ul>
-                 <li>标题</li>
-                 <p>段落</p>
-                 <li>11</li>
-                 <li>22</li>
-                 <li>33</li>
-                <!--无序列表-->
-                 </ul>
-<ol>
-     <li>11</li>
-     <li>22</li>
-    <li>33</li>
-   <!--有序列表-->
-</ol>
-<!--区块 用来布局div+css-->
-<!--行级元素 多个占一行
-    块级元素 自己占一行-->
+         <ul>
+         <li>标题</li>
+         <p>段落</p>
+         <li>11</li>
+         <li>22</li>
+         <li>33</li>
+         <!--无序列表-->
+         </ul>
+         <ol> 
+         <li>11</li>
+         <li>22</li>
+         <li>33</li>
+         <!--有序列表-->
+        </ol>
+        <!--区块 用来布局div+css-->
+        <!--行级元素 多个占一行
+            块级元素 自己占一行-->
         <div>
-       我是div
+           我是div
         </div>
          <div>
-        我是div
+           我是div
         </div>
-<span>
-    唯创
-</span> 
-<span>
-        唯创1
-    </span>
-<!--表格--> 
-<table border="1">
-    <tr>
-       <td>11</td>
-       <td>22</td> 
-    </tr>
-
+        <span>
+           唯创
+        </span> 
+        <span>
+           唯创1
+        </span> <!--表格--> 
+        <table border="1">
+        <tr>
+        <td>11</td>
+        <td>22</td> 
+        </tr>
+        <form action="aa"><!--表单-->
+           <div>
+               <!--自动获取焦点-->
+               <label for="bb">用户名：</label><input id="bb" type="text">
+           </div>
+            <br/>
+           <div>
+               <span>密码：</span><input type="password">
+           </div>
+             <!--单选框-->
+            <input type="radio" name="sex">男
+            <input type="radio" name="sex">女
+            <br/>
+            <!--复选框-->
+            <input type="checkbox" name="hobby">篮球
+            <input type="checkbox" name="hobby">足球
+            <select>
+                <!--下拉框-->
+                <option value="">16级</option>
+                <option value="">17级</option>
+                <option value="">18级</option>
+            </select>
+            <!--文本域-->
+            <textarea>
+            </textarea>
+            <button>按钮</button>
+            <!--自动提交按钮-->
+            <input type="submit" value="提交表单">
+           
+        </form>
         
- </body>
-    </html>
+    </body>
+ </html>
