--- a/html/test.html
+++ b/html/test.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--文档类型声明-->
 <html lang="en">
    <head>
      <meta charset="UTF-8"><!--保证页面不会乱码-->
@@ -38,8 +39,13 @@
          <!--有序列表-->
         </ol>
         <!--区块 用来布局div+css-->
-        <!--行级元素 多个占一行
-            块级元素 自己占一行-->
+        <!--行级元素 多个占一行 不能设置宽高
+            a span label strong b（加粗且重点）
+            块级元素 自己占一行 可以设置宽高
+            h1 p ul ol li div table
+            行级块元素
+            img
+        -->
         <div>
            我是div
         </div>
@@ -50,12 +56,13 @@
            唯创
         </span> 
         <span>
-           唯创1
+            <strong> 唯创</strong>
+          唯创1
         </span> <!--表格--> 
         <table border="1">
-        <tr>
+        <tr><!--行-->
         <td>11</td>
-        <td>22</td> 
+        <td>22</td> <!--列-->
         </tr>
         <form action="aa"><!--表单-->
            <div>
