--- a/css/7-定位.html
+++ b/css/7-定位.html
@@ -35,6 +35,8 @@
                 fixed    固定定位 相对于浏览器  定位后空间释放
                 static   默认的  
         */
+
+         /* margin-left:20px  定位 */
     </style>
 
   
