--- a/css/8-浮动.html
+++ b/css/8-浮动.html
@@ -45,13 +45,24 @@
     3 浮动元素下边加一个兄弟元素  clear:both
     4 clearfix ::after伪元素 块级  clear:both
  -->
+
 </head>
 <body>
-    <div id="div0">
-         <div id="div1"></div>
-         <div id="div2"></div>
-         <div id="div3"></div>
+    <div id="div0" class="clearfix">
+        <div id="div1">1</div>
+        <div id="div2">2</div>
+        <!-- <div id="div3"></div> -->
     </div>
-   
+
+    <h1>gdyuegdy hjgfdvyjgvsfy</h1>
+
+    <div class="clearfix">
+        <div>
+
+        </div>
+        <div>
+      
+        </div>
+            
+    </div>
 </body>
-</html>
