--- a/html/test.html
+++ b/html/test.html
@@ -30,8 +30,8 @@
          <li>11</li>
          <li>22</li>
          <li>33</li>
-         
-         </ul> <!--有序列表-->
+         </ul> 
+         <!--有序列表-->
          <ol> 
          <li>11</li>
          <li>22</li>
