--- a/DOM/6_选项卡.html
+++ b/DOM/6_选项卡.html
@@ -21,7 +21,7 @@
             height: 30px;
             background: skyblue;
             margin-right:3px;
-        }
+        }.
         li.selected{
             background: rgb(198, 230, 243);
         }
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-    <ul id="container">
+    <div id="container">
         <ul id="btn-box">
             <li class="selected">1111</li>
             <li>2222</li>
@@ -67,6 +67,7 @@
          aDiv[this.idx].className="active";
      }
  }
+//  function是事件处理函数
 
 
     
