--- a/jquery/练习2.html
+++ b/jquery/练习2.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .active{
+            background: pink;
+            border:1px soild red;
+        }
+    </style>
 </head>
 <body>
     <input type="text" value="请输入用户名" id ="txt">
