--- a/移动端/3_.html
+++ b/移动端/3_.html
@@ -60,6 +60,11 @@
             子元素 display:table-cell;
                   vertical-align:middle;
          */
+         #img{
+            background: url(img/01.jpg) ;
+            background-size:100%;
+            height: 540px;
+         }
 
         @media screen and (max-width:960px){
             h3{
@@ -83,8 +88,14 @@
             .right{
                 width:30%;
             }
+            #img{
+                background-image: url(img/01_s_2x.jpg) ;
+                /* background: #f000f0; */
+                /* padding-top 百分比相对于父元素 */
+                padding-top:56%;
+                height:0;
+            }
         }
-
         @media screen and (max-width:480px){
             #img-box .img01_s_2x{
                 display: block;
@@ -99,8 +110,7 @@
                 width:100%;
             }
         }
-
-    
+        
     </style>
 </head>
 <body>
@@ -111,9 +121,8 @@
         标题
     </h3>
     <div id="img-box">
-        <img src="img/01.jpg" class="img01" alt=""/>
-        <img src="img/01_s_2x.jpg" class="img01_s" alt=""/>
-        <img src="img/01_s.jpg" class="img01_s_2x" alt=""/>
+        <div id="img">
+        </div>
     </div>
     <div class="txt-box">
         <div class="left">
